--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 					<li class="scroll"><a href="#products">分页-01</a></li>
 					<li class="scroll"><a href="#services">分页-02</a></li>
 					<li class="scroll"><a href="#about">分页-03</a></li>
-					<li class="scroll"><a href="#portfolio">分页-04</a></li>
-					<li class="scroll"><a href="#team">分页-05</a></li>
-					<li class="scroll"><a href="#contact-us">分页-06</a></li>                        
+					<li class="scroll"><a href="#portfolio">相关产品</a></li>
+					<li class="scroll"><a href="#team">小组成员</a></li>
+					<li class="scroll"><a href="#contact-us">联系我们</a></li>                        
 				</ul>
 			</div>
 		</div><!--/.container-->
@@ -252,16 +252,16 @@
 <section id="portfolio">
 	<div class="container">
 		<div class="section-header">
-			<h2 class="section-title wow fadeInDown">分页-04</h2>
-			<p class="wow fadeInDown">副标题</p>
+			<h2 class="section-title wow fadeInDown">相关产品</h2>
+			<p class="wow fadeInDown">我们值得信赖</p>
 		</div>
 
 		<div class="text-center">
 			<ul class="portfolio-filter">
-				<li><a class="active" href="#" data-filter="*">所有图片</a></li>
-				<li><a href="#" data-filter=".designing">部分图片</a></li>
-				<li><a href="#" data-filter=".mobile">部分图片</a></li>
-				<li><a href="#" data-filter=".development">部分图片</a></li>
+				<li><a class="active" href="#" data-filter="*">全部</a></li>
+				<li><a href="#" data-filter=".designing">Red系列</a></li>
+				<li><a href="#" data-filter=".mobile">Spot系列</a></li>
+				<li><a href="#" data-filter=".development">RedSpot系列</a></li>
 			</ul><!--/#portfolio-filter-->
 		</div>
 
@@ -270,21 +270,21 @@
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/01.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						描述
+						<h3>Red3</h3>
+						RMB 2921 起
 						<a class="preview" href="images/portfolio/01.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>新出风格，新出境界</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
-			<div class="portfolio-item mobile development">
+			<div class="portfolio-item designing">
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/02.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>Red6</h3>
+						 RMB 3896 起
 						<a class="preview" href="images/portfolio/02.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>一切都刚刚好</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
@@ -292,10 +292,10 @@
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/03.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>Red9</h3>
+						 RMB 6229 起
 						<a class="preview" href="images/portfolio/03.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>称心称手，超值入手</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
@@ -303,21 +303,21 @@
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/04.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						描述
+						<h3>Spot One</h3>
+						RMB7999起
 						<a class="preview" href="images/portfolio/04.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>动力，行动力</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
-			<div class="portfolio-item designing development">
+			<div class="portfolio-item mobile">
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/05.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>Spot Two</h3>
+						 RMB 9999 起
 						<a class="preview" href="images/portfolio/05.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>高能，召唤高手</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
@@ -325,32 +325,32 @@
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/06.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>Spot Three</h3>
+						 RMB18999起
 						<a class="preview" href="images/portfolio/06.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>够轻，够轻快</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
-			<div class="portfolio-item designing development">
+			<div class="portfolio-item development">
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/07.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>RedSpot1</h3>
+						 RMB6229起
 						<a class="preview" href="images/portfolio/07.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>你的下一台电脑，何必是电脑。</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 
-			<div class="portfolio-item mobile">
+			<div class="portfolio-item development">
 				<div class="portfolio-item-inner">
 					<img class="img-responsive" src="images/portfolio/08.jpg" alt="">
 					<div class="portfolio-info">
-						<h3>图片名</h3>
-						 描述
+						<h3>RedSpot2</h3>
+						 RMB3896起
 						<a class="preview" href="images/portfolio/08.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
-					<h4>底部文字</h4>
+					<h4>超强，超值</h4>
 				</div>
 			</div><!--/.portfolio-item-->
 		</div>
@@ -360,7 +360,7 @@
 <section id="team">
 <div class="container">
 <div class="section-header">
-			<h2 class="section-title wow fadeInDown">项目组成员</h2>
+			<h2 class="section-title wow fadeInDown">小组成员</h2>
 			<p class="wow fadeInDown">哇欧！我的上帝，瞧瞧这几个英俊的小伙子</p>
 		</div>			
 <div class="row" data-anim-type="fade-in-up">
