--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ul class="nav navbar-nav">
 					<li class="scroll active"><a href="#home">主页</a></li> 
 					<li class="scroll"><a href="#products">前言</a></li>
-					<li class="scroll"><a href="#services">分页-02</a></li>
+					<li class="scroll"><a href="#services">公司部门</a></li>
 					<li class="scroll"><a href="#about">新品展示</a></li>
 					<li class="scroll"><a href="#portfolio">相关产品</a></li>
 					<li class="scroll"><a href="#team">小组成员</a></li>
@@ -102,8 +102,7 @@
 	<div class="container">
 
 		<div class="section-header">
-			<h2 class="section-title wow fadeInDown">分页-02</h2>
-			<p class="wow fadeInDown">副标题</p>
+			<h2 class="section-title wow fadeInDown">公司部门</h2>
 		</div>
 
 		<div class="row">
@@ -114,8 +113,8 @@
 							<i class="fa fa-futbol-o"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-01</h4>
-							<p>内容</p>
+							<h4 class="media-heading">人力资源部</h4>
+							<p>招聘、维护与增强企业人力资源的职能任务</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -126,8 +125,8 @@
 							<i class="fa fa-compass"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-02</h4>
-							<p>内容</p>
+							<h4 class="media-heading">综合行政部</h4>
+							<p>辅助其他部门运作的综合管理职能任务</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -138,8 +137,8 @@
 							<i class="fa fa-database"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-03</h4>
-							<p>内容</p>
+							<h4 class="media-heading">资本财务部</h4>
+							<p>资本财务是企业运营过程中资金筹集，使用和利润分配活动总称</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -150,8 +149,8 @@
 							<i class="fa fa-bar-chart"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-04</h4>
-							<p>内容</p>
+							<h4 class="media-heading">产品研发部</h4>
+							<p>通过研究来开创、升级与完善产品技术的职能任务</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -162,8 +161,8 @@
 							<i class="fa fa-paper-plane-o"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-05</h4>
-							<p>内容</p>
+							<h4 class="media-heading">市场营销部</h4>
+							<p>驱动潜在客户认知企业与产品价值，从而购买产品的职能任务</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -174,8 +173,8 @@
 							<i class="fa fa-bullseye"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">小标题-06</h4>
-							<p>内容</p>
+							<h4 class="media-heading">生产服务部</h4>
+							<p>根据产品技术、采购和加工生产要素，生成最终产品的职能任务，在客户试用和使用产品过程中提供支持与协助的职能任务</p>
 						</div>
 					</div>
 				</div><!--/.col-md-4-->
@@ -454,6 +453,7 @@
 						<div class="row">
 							<div class="col-xs-12">
 								<blockquote>吕睿说的话</blockquote>
+                                <h4>我该说啥，，，tuo大佬牛逼！</h4>
 							</div>
 						</div>
 						<div class="row"> 
