--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>吕睿说的话</blockquote>
-                                <h4>我该说啥，，，tuo大佬牛逼！</h4>
+								<blockquote>对方正在输入...</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
@@ -468,7 +467,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>唐先富说的话</blockquote>
+								<blockquote>keep smiling ✔</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
@@ -483,7 +482,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>彭鑫波说的话</blockquote>
+								<blockquote>彭鑫波啥都没说</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
@@ -498,7 +497,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>彭涛说的话</blockquote>
+								<blockquote>彭涛啥都没说</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
@@ -513,7 +512,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>骆建安说的话</blockquote>
+								<blockquote>东方不亮西方亮 憨批啥样我啥样</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
