--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <title>求索</title>
-<!-- core CSS -->
+
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="css/animate.min.css" rel="stylesheet"> 
 <link href="css/prettyPhoto.css" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet"> 
-<!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<script src="js/respond.min.js"></script>
-<![endif]-->       
+      
 <link rel="shortcut icon" href="images/ico/favicon.ico"> 
 </head> 
 
@@ -45,9 +42,9 @@
 					<li class="scroll"><a href="#contact-us">联系我们</a></li>                        
 				</ul>
 			</div>
-		</div><!--/.container-->
-	</nav><!--/nav-->
-</header><!--/header-->
+		</div>
+	</nav>
+</header>
 
 <section id="hero-banner">
 		 <div class="banner-inner">
@@ -62,7 +59,7 @@
 					</div>
 				</div>
 			</div>
-</section><!--/#main-slider-->
+</section>
 <section class="download-now" id="products">
 	<div class="container">
 	 <div class="section-header">
@@ -89,10 +86,10 @@
 							广纳人才，并相继研发出一系列产品</h3></p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 
 			</div>
-		</div><!--/.row-->  
+		</div>
 		</div>
 	  </div>
 	</div>
@@ -117,7 +114,7 @@
 							<p>招聘、维护与增强企业人力资源的职能任务</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
 					<div class="media service-box">
@@ -129,7 +126,7 @@
 							<p>辅助其他部门运作的综合管理职能任务</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms">
 					<div class="media service-box">
@@ -141,7 +138,7 @@
 							<p>资本财务是企业运营过程中资金筹集，使用和利润分配活动总称</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 			
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms">
 					<div class="media service-box">
@@ -153,7 +150,7 @@
 							<p>通过研究来开创、升级与完善产品技术的职能任务</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
 					<div class="media service-box">
@@ -165,7 +162,7 @@
 							<p>驱动潜在客户认知企业与产品价值，从而购买产品的职能任务</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 
 				<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
 					<div class="media service-box">
@@ -177,11 +174,11 @@
 							<p>根据产品技术、采购和加工生产要素，生成最终产品的职能任务，在客户试用和使用产品过程中提供支持与协助的职能任务</p>
 						</div>
 					</div>
-				</div><!--/.col-md-4-->
+				</div>
 			</div>
-		</div><!--/.row-->    
-	</div><!--/.container-->
-</section><!--/#services-->
+		</div>
+	</div>
+</section>
 
 <section id="about">
 	<div class="container">
@@ -207,7 +204,7 @@
 			</div>
 		</div>
 	</div>
-</section><!--/#about-->
+</section>
 
 
 <section id="portfolio">
@@ -223,7 +220,7 @@
 				<li><a href="#" data-filter=".designing">Red系列</a></li>
 				<li><a href="#" data-filter=".mobile">Spot系列</a></li>
 				<li><a href="#" data-filter=".development">RedSpot系列</a></li>
-			</ul><!--/#portfolio-filter-->
+			</ul>
 		</div>
 
 		<div class="portfolio-items">
@@ -236,7 +233,7 @@
 						<a class="preview" href="images/portfolio/01.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>新出风格，新出境界</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item designing">
 				<div class="portfolio-item-inner">
@@ -247,7 +244,7 @@
 						<a class="preview" href="images/portfolio/02.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>一切都刚刚好</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item designing">
 				<div class="portfolio-item-inner">
@@ -258,7 +255,7 @@
 						<a class="preview" href="images/portfolio/03.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>称心称手，超值入手</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item mobile">
 				<div class="portfolio-item-inner">
@@ -269,7 +266,7 @@
 						<a class="preview" href="images/portfolio/04.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>动力，行动力</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item mobile">
 				<div class="portfolio-item-inner">
@@ -280,7 +277,7 @@
 						<a class="preview" href="images/portfolio/05.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>高能，召唤高手</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item mobile">
 				<div class="portfolio-item-inner">
@@ -291,7 +288,7 @@
 						<a class="preview" href="images/portfolio/06.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>够轻，够轻快</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item development">
 				<div class="portfolio-item-inner">
@@ -302,7 +299,7 @@
 						<a class="preview" href="images/portfolio/07.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>你的下一台电脑，何必是电脑。</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 
 			<div class="portfolio-item development">
 				<div class="portfolio-item-inner">
@@ -313,10 +310,10 @@
 						<a class="preview" href="images/portfolio/08.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>					</div>
 					<h4>超强，超值</h4>
 				</div>
-			</div><!--/.portfolio-item-->
+			</div>
 		</div>
-	</div><!--/.container-->
-</section><!--/#portfolio-->
+	</div>
+</section>
 
 <section id="team">
 <div class="container">
@@ -439,7 +436,7 @@
 			</div>
 		</div>
 	</div>
-</section><!--/#business-stats-->
+</section>
 
 <section class="testimonial-area" id="testimonial">
 		<div class="container">
@@ -482,7 +479,7 @@
 					<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
 						<div class="row">
 							<div class="col-xs-12">
-								<blockquote>彭鑫波啥都没说</blockquote>
+								<blockquote>”加入这个组，三生有幸“</blockquote>
 							</div>
 						</div>
 						<div class="row"> 
@@ -533,7 +530,7 @@
 			<p class="wow fadeInDown">有啥问题请邮件联系我们</p>
 		</div>
 	</div>
-</section><!--/#contact-us-->
+</section>
 
 
 <section id="contact">
@@ -553,7 +550,6 @@
 				</div></div>
 				<div class="col-sm-8 col-md-8">
 					<div class="contact-form">
-					<!--NOTE: Update your email Id in "contact_me.php" file in order to receive emails from your contact form-->
 	<form name="sentMessage" id="contactForm"  novalidate> 
 	<div class="control-group">
 	<div class="controls">
@@ -580,7 +576,7 @@
 	maxlength="999" style="resize:none"></textarea>
 	</div>
 	</div> 		 
-	<div id="success"> </div> <!-- For success/fail messages -->
+	<div id="success"> </div>
 	<button type="submit" class="btn btn-primary pull-right">Send</button><br />
 	</form>
 					</div>
@@ -588,25 +584,14 @@
 			</div>
 		</div>
 	</div>   
-</section><!--/#bottom-->
+</section>
 
 <footer id="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">模板来源于互联网，侵删。<a target="_blank" href="https://www.csdn.net/">CSDN</a></div>
-			<div class="col-sm-6">
-				<ul class="social-icons">
-					<li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-					<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-					<li><a href="#"><i class="fa fa-github"></i></a></li>
-				</ul>
-			</div>
 		</div>
 	</div>
-</footer><!--/#footer-->
+</footer>
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script> 
