--- a/index.html
+++ b/index.html
@@ -74,16 +74,12 @@
 			  <div class="row">
 			<div class="features">
 
-				<div class="col-md-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
-				<div>
-							<i class="fa fa-compass"></i>
-						</div>
-					<div class="media service-box">
-						
-						<div class="media-body">
-							<h4 class="media-heading">公司简介</h4>
-							<p><h3>本公司本着“家国共担，手脑并用”的宗旨，不断向社会
-							广纳人才，并相继研发出一系列产品</h3></p>
+				<div id="txf" class="col-md-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
+					<div>
+						<div>
+							<h2 class="media-heading" align="right">公司简介</h2>
+							<p><h4>本公司本着“家国共担，手脑并用”的宗旨，不断向社会
+							广纳人才，并相继研发出一系列产品………………………</h4></p>
 						</div>
 					</div>
 				</div>
@@ -211,7 +207,7 @@
 	<div class="container">
 		<div class="section-header">
 			<h2 class="section-title wow fadeInDown">相关产品</h2>
-			<p class="wow fadeInDown">我们值得信赖</p>
+			<p class="wow fadeInDown"><a href="分页一.html"><h4>更多产品大图显示……</h4></a></p>
 		</div>
 
 		<div class="text-center">
@@ -589,6 +585,8 @@
 <footer id="footer">
 	<div class="container">
 		<div class="row">
+			<p>湖南信息职业技术学院 第六小组</p>
+			<p>您的关注是我们公司前进的动力！</p>
 		</div>
 	</div>
 </footer>
